--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 name = "snake"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Peter Davies <pejdavies1606@gmail.com>"]
 
 [dependencies]
 itertools = "0.11.0"
